load images + change DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:postgresql://localhost/LK
+spring.datasource.url=jdbc:postgresql://localhost/LK_DB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
