--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:postgresql://localhost/LK_DB
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=trmuser
 spring.jpa.generate-ddl=true
 
 server.servlet.session.timeout=2000m
