--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,14 @@
+#--spring.profiles.active=dev
 spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:postgresql://localhost/LK_DB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 
 server.servlet.session.timeout=2000m
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=82.137.166.125
+hostname=localhost:8080
