--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:postgresql://localhost/LK_DB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 
 server.servlet.session.timeout=2000m
 
