Наконец-то АВТОРИЗАЦИЯ через JWT реализована!!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,31 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=false
 
-server.servlet.session.timeout=2000m
+security.oauth2.client.clientId=https://attest.voenmeh.ru
+security.oauth2.client.clientSecret=LkznRW8ebR7JSW2-zQmGOHuZ0ng4WBk-59nUekXI
+security.oauth2.client.accessTokenUri=https://sso.voenmeh.ru/adfs/oauth2/token/
+security.oauth2.client.userAuthorizationUri=https://sso.voenmeh.ru/adfs/oauth2/authorize/
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=openid,email
+security.oauth2.resource.userInfoUri=https://attest.voenmeh.ru
+security.oauth2.resource.preferTokenInfo=true
 
+#security.oauth2.client.clientId=410808336248-anuqiq5a3nup53ok08r52nldkpc52cq8.apps.googleusercontent.com
+#security.oauth2.client.clientSecret=KVi6gKGDYzewC2IsSu9-kEcn
+#security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+#security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+#security.oauth2.client.tokenName=oauth_token
+#security.oauth2.client.authenticationScheme=query
+#security.oauth2.client.clientAuthenticationScheme=form
+#security.oauth2.client.scope=openid,email,profile
+#security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+#security.oauth2.resource.preferTokenInfo=false
+#security.oauth2.resource.filter-order=3
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+
+server.servlet.session.timeout=2000m
+
+#logging.level.root=WARN
+#logging.level.org.springframework.security=DEBUG
